--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello setup</h1>
+    <h1>Hello index</h1>
     <div id="app"></div>
     <script src='/bundle.js'></script>
 </body>
